--- a/app/config/config.yml
+++ b/app/config/config.yml
@@ -65,3 +65,9 @@ swiftmailer:
     username: '%mailer_user%'
     password: '%mailer_password%'
     spool: { type: memory }
+
+##Knp_snappy Configuration
+#    knp_snappy:
+#        pdf:
+#            enabled:    true
+#            binary:     %kernel.root_dir%/../vendor/h4cc/wkhtmltopdf-amd64/bin/wkhtmltopdf-amd64
