--- a/composer.json
+++ b/composer.json
@@ -17,7 +17,9 @@
         "php": ">=5.5.9",
         "doctrine/doctrine-bundle": "^1.6",
         "doctrine/orm": "^2.5",
+        "h4cc/wkhtmltopdf-amd64": "^0.12.4",
         "incenteev/composer-parameter-handler": "^2.0",
+        "knplabs/knp-snappy-bundle": "^1.4",
         "sensio/distribution-bundle": "^5.0.19",
         "sensio/framework-extra-bundle": "^5.0.0",
         "symfony/monolog-bundle": "^3.1.0",
