--- a/web/.htaccess
+++ b/web/.htaccess
@@ -1,18 +1,18 @@
-# Use the front controller as index file. It serves as a fallback solution when
-# every other rewrite/redirect fails (e.g. in an aliased environment without
-# mod_rewrite). Additionally, this reduces the matching process for the
-# start page (path "/") because otherwise Apache will apply the rewriting rules
-# to each configured DirectoryIndex file (e.g. index.php, index.html, index.pl).
+# Utilisez le contrôleur frontal comme fichier d’index. Il sert de solution de secours lorsque
+# toutes les réécriture / redirection échouent (par exemple, dans un environnement avec alias sans
+# mod_rewrite). De plus, cela réduit le processus de correspondance pour la page de démarrage
+# (chemin "/") car sinon, Apache appliquera les règles de réécriture
+# à chaque fichier DirectoryIndex configuré (par exemple, index.php, index.html, index.pl).
 DirectoryIndex app.php
 
-# By default, Apache does not evaluate symbolic links if you did not enable this
-# feature in your server configuration. Uncomment the following line if you
-# install assets as symlinks or if you experience problems related to symlinks
-# when compiling LESS/Sass/CoffeScript assets.
-# Options FollowSymlinks
+# Par défaut, Apache n’évalue pas les liens symboliques si vous n’avez pas activé cette option.
+# fonctionnalité dans la configuration de votre serveur. Décommentez la ligne suivante si vous
+# installer des ressources sous forme de liens symboliques ou si vous rencontrez des problèmes liés aux liens symboliques
+# lors de la compilation d’actifs LESS / Sass / CoffeScript.
+ Options FollowSymlinks
 
-# Disabling MultiViews prevents unwanted negotiation, e.g. "/app" should not resolve
-# to the front controller "/app.php" but be rewritten to "/app.php/app".
+# La désactivation de MultiViews empêche les négociations non désirées, par exemple. "/ app" ne devrait pas résoudre
+# sur le contrôleur frontal "/app.php" mais être réécrit en "/app.php/app".
 <IfModule mod_negotiation.c>
     Options -MultiViews
 </IfModule>
@@ -20,49 +20,48 @@ DirectoryIndex app.php
 <IfModule mod_rewrite.c>
     RewriteEngine On
 
-    # Determine the RewriteBase automatically and set it as environment variable.
-    # If you are using Apache aliases to do mass virtual hosting or installed the
-    # project in a subdirectory, the base path will be prepended to allow proper
-    # resolution of the app.php file and to redirect to the correct URI. It will
-    # work in environments without path prefix as well, providing a safe, one-size
-    # fits all solution. But as you do not need it in this case, you can comment
-    # the following 2 lines to eliminate the overhead.
+    # Déterminez automatiquement le RewriteBase et définissez-le comme variable d’environnement.
+       # Si vous utilisez des alias Apache pour l'hébergement virtuel de masse ou avez installé le
+       # projet dans un sous-répertoire, le chemin de base sera ajouté au début pour permettre
+       # résolution du fichier app.php et à rediriger vers l’URI correct. Ce sera
+       # travailler dans des environnements sans préfixe de chemin également, offrant une solution unique et sécurisée
+       # convient à toutes les solutions. Mais comme vous n'en avez pas besoin dans ce cas, vous pouvez commenter
+       # les 2 lignes suivantes pour éliminer les frais généraux.
     RewriteCond %{REQUEST_URI}::$1 ^(/.+)/(.*)::\2$
     RewriteRule ^(.*) - [E=BASE:%1]
 
-    # Sets the HTTP_AUTHORIZATION header removed by Apache
+   # Définit l'en-tête HTTP_AUTHORIZATION supprimée par Apache
     RewriteCond %{HTTP:Authorization} .
     RewriteRule ^ - [E=HTTP_AUTHORIZATION:%{HTTP:Authorization}]
 
-    # Redirect to URI without front controller to prevent duplicate content
-    # (with and without `/app.php`). Only do this redirect on the initial
-    # rewrite by Apache and not on subsequent cycles. Otherwise we would get an
-    # endless redirect loop (request -> rewrite to front controller ->
-    # redirect -> request -> ...).
-    # So in case you get a "too many redirects" error or you always get redirected
-    # to the start page because your Apache does not expose the REDIRECT_STATUS
-    # environment variable, you have 2 choices:
-    # - disable this feature by commenting the following 2 lines or
-    # - use Apache >= 2.3.9 and replace all L flags by END flags and remove the
-    #   following RewriteCond (best solution)
+    # Redirection vers l'URI sans contrôleur frontal pour éviter le contenu en double
+     # (avec et sans `/ app.php`). Ne faites cette redirection qu'à la première
+     # réécrit par Apache et non sur les cycles suivants. Sinon, nous aurions un
+     # boucle de redirection sans fin (demande -> réécriture sur le contrôleur frontal ->
+     # redirect -> request -> ...).
+     # Donc, si vous obtenez une erreur "trop de redirections" ou si vous êtes toujours redirigé
+     # à la page de démarrage car votre Apache n'expose pas le REDIRECT_STATUS
+     # variable d'environnement, vous avez 2 choix:
+     # - désactive cette fonctionnalité en commentant les 2 lignes suivantes ou
+     # - utilisez Apache> = 2.3.9 et remplacez tous les drapeaux L par des drapeaux END et supprimez le
+     # suivant RewriteCond (meilleure solution)
     RewriteCond %{ENV:REDIRECT_STATUS} ^$
     RewriteRule ^app\.php(?:/(.*)|$) %{ENV:BASE}/$1 [R=301,L]
 
-    # If the requested filename exists, simply serve it.
-    # We only want to let Apache serve files and not directories.
-    RewriteCond %{REQUEST_FILENAME} -f
+    # Si le nom de fichier demandé existe, il suffit de le servir.
+     # Nous voulons seulement laisser Apache servir des fichiers et non des répertoires.    RewriteCond %{REQUEST_FILENAME} -f
     RewriteRule ^ - [L]
 
-    # Rewrite all other queries to the front controller.
+    # Réécrit toutes les autres requêtes sur le contrôleur frontal.
     RewriteRule ^ %{ENV:BASE}/app.php [L]
 </IfModule>
 
 <IfModule !mod_rewrite.c>
     <IfModule mod_alias.c>
-        # When mod_rewrite is not available, we instruct a temporary redirect of
-        # the start page to the front controller explicitly so that the website
-        # and the generated links can still be used.
+        # Lorsque mod_rewrite n'est pas disponible, nous ordonnons une redirection temporaire de
+                 # la page de démarrage du contrôleur frontal explicitement pour que le site Web
+                 # et les liens générés peuvent toujours être utilisés.
         RedirectMatch 302 ^/$ /app.php/
-        # RedirectTemp cannot be used instead
+        # RedirectTemp ne peut pas être utilisé à la place
     </IfModule>
 </IfModule>
