--- a/composer.json
+++ b/composer.json
@@ -17,6 +17,7 @@
         "php": ">=5.5.9",
         "doctrine/doctrine-bundle": "^1.6",
         "doctrine/orm": "^2.5",
+        "dompdf/dompdf": "^0.8.3",
         "h4cc/wkhtmltopdf-amd64": "^0.12.4",
         "incenteev/composer-parameter-handler": "^2.0",
         "knplabs/knp-snappy-bundle": "^1.4",
@@ -27,7 +28,8 @@
         "symfony/polyfill-apcu": "^1.0",
         "symfony/swiftmailer-bundle": "^2.6.4",
         "symfony/symfony": "3.4.*",
-        "twig/twig": "^1.0||^2.0"
+        "twig/twig": "^1.0||^2.0",
+        "whiteoctober/tcpdf-bundle": "^1.1"
     },
     "require-dev": {
         "sensio/generator-bundle": "^3.0",
